@@ -5,11 +5,11 @@ AUX galileo.udev 132 SHA256 180e05455f9f2977ede6b84c239409f1ffd012e55a6494c462f6
 AUX galileorc 565 SHA256 cb78e98f08943fedcbc72bde3071a90917b8c7c898f10b1803e58d8d56bd39d8 SHA512 816bab91138045b19cf4a27760acaa7673e0e01c6e2d49b7dfcfd42ac86842a715d63c8f352d91052945cc8c5f0a115fe174e225034addb1ee4d9af3ed480f87 WHIRLPOOL e25b07d461ab7fd2f49ee699ec688f933de7e76b60569c82dfd8cefdf2947360c3b728243c254033572a1e337ee04b5556e384239e0f6958dfb8eb2153ee29e0
 AUX galileorc-2 712 SHA256 063cf6e3fa87bf7aa647708205b7f711d38d9583a4804db95a7cdd31be3fecf4 SHA512 a0604216da28458d1acffb7b75d26c6c9cf124b059750f9c4582a67d1a74e0decea3db40e2e143b17412cc96290014a760b7ca889fcf7c6db17c87d064d400fe WHIRLPOOL 36b75b2e2805e592a49d955e405220c6974548f216ef31b2264bf592b740068be678e26eb7af3d70fec7f3c84deaddfddfdea02c6b8bc9453d11c96d7cc1510c
 AUX gentoo-no-tests.patch 401 SHA256 78c26d9b9293bc43ee1af82e9b106bed65bb9fad380cf687372ce146c1cf9791 SHA512 a2bea4da3d6a615f08b79f3edf5709eafbd97d834bc57718604a98e1977851dfd13dbdce7cbf3a5b9355a9af3fecd0a08ce852accdccd2e465361b1540b90967 WHIRLPOOL e2ec02d9e0a3d73e6ed028e8408b1b4fa04bcfa6cae189ed872a259d123cf483dee67ca8b500b4d5d0530aa2b36cbc94533f91bd929c49d65e0507775f0a8ef1
+DIST galileo-0.4.1.tar.bz2 32319 SHA256 cfe7f8a2ea5413ab99d38276b89f1b8366c4eb2bbe6aaf353b93fadefdb9a689 SHA512 4c483f940d58441c63ebe2a731183c2a0651cb0274efee7fbe26e465ca91c196db79e4de685891fb13fd736a3ac149e7add7db25868ddcf7e2b460c6be056bb8 WHIRLPOOL bb35465d23eabc33c036bcf3ec177cf253b2a845eaf58c879f01ad7c8786f2647b000f8240e3217c51b6703dda941b74984719a18742fd00c2660e2257824731
 DIST galileo-0.4.tar.bz2 31704 SHA256 7049e1fb47af888aced7b06454d96d9ed3f22994bafd63c38e3b85008801fe2b SHA512 4a3f59cca4a80c4c20fa5d82fa6924dcb4ea44c942576013224356546bdc42ad68a2061e20a32692ac51638b17ddc256ca4d541cd7b0c051a5288e6aba87a06b WHIRLPOOL da357442764e05338fc48dc447934521f61de32cb02ec27aa5fc5dbb8d4c708afdcce2ab0ed2f186cbe5b374c93b79aceade18ec71e68652155a8162a3c9dff8
-DIST galileo-0.4_pre20140222.tar.gz 21759 SHA256 915a729502f912b7797b34d565d12ec4f8e1d3eb469a2cae2629f4e71eb908a4 SHA512 57f3639009c8d1bf98b189db9d85cfea82520f1ac4cbcfc7cfffd698909934edf6700ca5b310a14fd23fcf09d874ca7ff8d38081f4cedaf86e648eeafcc6b946 WHIRLPOOL 0f156c9c114313f6e620bcfeac54e698bf0e196f8f219932b2bb08c5d3ac1a561346600a37426d2ae25b56ef60c423d61f437726eb1c69c2514abf0d76c95c0d
 DIST galileo-0.4_pre20140326.tar.gz 30710 SHA256 a112d2c6b49da27a768d53fb47b506d3d3fbdc65599e62809eeba28ea1559f9c SHA512 5230b115f586fcf112dee1bbe29ac49793c9e61064d4d6858614addf345c7068c8e82a683ed2948ed4517f3d5f702c33408f86660ef46dfe2ac61e300d1f6665 WHIRLPOOL e6d0bb4bd3e50cc5ca10a2f130d612bafa6c7c732f2f209a4b4b431fd0e773d0dc3a4d2b5a88a3f54eb9c3e420d75ce01aa7eaf6f9b1bc1a5bb9940b149c867a
+EBUILD galileo-0.4.1.ebuild 2329 SHA256 dd5ab7e87f6ab6feff771a9466005af51752cc9368aa42efcb95436d3d74457c SHA512 d5605ab2ea0aba9a8b3428f9adee221ab1e71a6ae94a8191824fa69cecef1d74ed60aa30242143b18cbe81a78e88903f124789e81114a304ddbef5447dbe5f2d WHIRLPOOL b761b403ab04cc5063903aaaeef63e3bb3d3308d0b51f4bb1e62ec1b8039789fc0f652c9be662979e7a4a0835a14e84d27569b07e550da25aafe5cfee3c5306d
 EBUILD galileo-0.4.ebuild 2329 SHA256 292400bfa7d34787b905bd7986cf25c3efee6c08fbb00d3c8189ebc7a5b10753 SHA512 a38335d5c5d8d95ca8848e2b8707a332ee77547a68c6ae6f8a9db1bf0fd69ec3438167597fd70fc1c5979af2b09389a537a8858a92354e719f9afa084aaaf636 WHIRLPOOL f447cca5a8e6652f5dee671a8b070a68313bd5c42d82b4153059db99be1f0a350116f37ca43ad00315dda84ac4888ce16837ef4a87aa741f2ca2cdfcae24ff99
-EBUILD galileo-0.4_pre20140222.ebuild 2045 SHA256 d2299c9b96a7de18ac75f74e91d5017570f401dcbc7a896b6d70606b2e61857b SHA512 50e68c3ed0ddd943785b8f02551c900a447fc4b252500731517593ef7aac985d50fbe2fc9e035aa0bf649ef5b95747b8bd621a8acf3d2baf167270c6dd32cceb WHIRLPOOL 104f2a6d85ffb05f0434a77680de7eab9950db3b6b0b21555b33cf9e8489923f039c45e6acd39ff9914c46eb0e6475eb57f78942fcb02cb4b0b434f862c1a6ba
 EBUILD galileo-0.4_pre20140326.ebuild 2307 SHA256 14f405623438fbb5ab8747ac02ba47b02d6cc8fd01ce27009ea2a805748a07cd SHA512 699af2b8ca56d0ab5bed02aec0f23236ec799cb32616238daec66b9634cfec2cf2108ba9db3e5a81da1e36a7096fbfbbb14a9981f954f720d099b6e9e49710f1 WHIRLPOOL bab4bd023c932c52df36483d749d33a7ccc996eebc63f0e0eb9084bd9c3b8ca1db4f7d0ab6ee62a560d090413236b2e6b9513761316c06a138b4f33787af550d
 MISC ChangeLog 665 SHA256 a646a61e0874849cbbf2db33bb43293ffc64cf2a5fafaf52d6c9533864706daf SHA512 859e3d8bc1c89fd1694e41bd080dfe9586e18c7d7ee022c3264eab16807a6b041f38c2548522cc854b9d99ed0ad9ce3859eebd3401c9d8ea56bf4f0e488e8995 WHIRLPOOL 4a97a21c0a46760dac79a381a4025ab5bb217851e1c80f76a4516148ca78e8e26533f855197634bc6423408a1845a2ff308b287830c4025b2d07561d5d16810b
 MISC metadata.xml 1060 SHA256 e88ce4e886acbc1e89e5fc669424a10d4b1baf7d2a9fc2d6e1781b29dc0c4976 SHA512 c1973617b60ba6e4c5d6bb0d0cbed8319685185aabab428d10a7e0cb312087656b6598f78830af475856bfae24067c2ecd125ae5bde0523ed3e5258d79db6e5c WHIRLPOOL d6d5261bfbb0f0e7c4758159540a137fd97c981c21315b29e7ec7b212f5d3ad78e4fdef2343408a503e41fe82340f631daa76f42dd7d4007bd2334a76626a131
