@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*galileo-0.4.1 (29 Jun 2014)
+
+  29 Jun 2014; Stuart Hickinbottom <stuart@hickinbottom.com>
+  -galileo-0.4_pre20140222.ebuild, +galileo-0.4.1.ebuild:
+  Bump for galileo-0.4.1
+
 *galileo-0.4 (13 Apr 2014)
 
   13 Apr 2014; Stuart Hickinbottom <stuart@hickinbottom.com>
